# bakalarka

./: .gitignore  CMakeLists.txt  EllipseDetectorYaed.cpp  EllipseDetectorYaed.h  Main.cpp  async_opencv_video_capture.hpp  common.cpp  common.h  ellipseDetector.cpp  ellipseDetector.h  mut.cpp  render_eye_detections.cpp  render_eye_detections.h  render_face.hpp  webcam_head_pose_ex.cpp
backup/: webcam_head_pose.cpp.old  webcam_head_pose_ex.cpp
junk/: networking.cpp  networking.h  ping.cpp  ping.h
oldFiles/: oldMains.cpp
src/: EllipseDetectorYaed.cpp  EllipseDetectorYaed.h  common.cpp  common.h  ellipseDetector.cpp  ellipseDetector.h  webcam_head_pose_ex.cpp
